# oncology

./: .gitignore  README.md  ai_team_prompts.py  extract_prompts.py  main.py  pdf_prompts.py  prompts.py  pyproject.toml  requirements.txt
not_used/: test.py  updated_PDF.py  😷_patient_simulations.py  🧠_Embed_only_Parkinson_Chat.py
pages/: _Parkinson_Chat.py  test_method2.py  updated_PDF.py  👔_Interview_Practice.py  👔_Oncology_Interview_Practice.py  👩🏾‍🏫_interactive_teacher.py  👩🏾‍💻_My_AI_Team.py  👩🏾‍💻_My_Oncology_AI_Team.py  📝_Retrieving_Structured_Data.py  🗨️_Communication_and_Cancer_DDx.py  🗨️_Communication_and_DDx.py  😞_Bias_Detection.py  😞_Bias_Detection_in_Oncology.py  😞_bias_in_charts.py  😷_patient_simulations.py  🧐_interview_practice.py  🧠_Parkinson_Chat.py  🧬_Cancer_Chat.py  🩻_Fun_with_Images.py
parkinson_disease.faiss/: index.faiss  index.pkl
