[tool.poetry]
name = "neuro-medimate"
version = "0.1.0"
description = "Interactive LLM tools for Neurology Practices"
authors = ["David Liebovitz <DavidL@northwestern.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
PyMuPDF = "^1.23.25"
beautifulsoup4 = "^4.12.3"
fpdf = "^1.7.2"
pillow = "^10.2.0"
openai = "^1.12.0"
langchain = "^0.1.9"
audio-recorder-streamlit = "^0.0.8"
elevenlabs = "^0.2.27"
langchain-community = "^0.0.24"
tiktoken = "^0.6.0"
faiss-cpu = "^1.7.4"
langchain-openai = "^0.0.8"

[tool.poetry.group.dev.dependencies]
streamlit = "^1.31.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
